--- a/public/home.html
+++ b/public/home.html
@@ -1,6 +1,10 @@
 
-<link rel="stylesheet" href="/home.css">
-
+<!DOCTYPE html>
+<html>
+<head>
+<title>Document</title>
+<link rel="stylesheet" href="/home.css"></link>
+</head>
 
 
 <body>
@@ -24,4 +28,6 @@
         </div>
     </div>
 </body>
+<script type = "text/javascript" src ="/home.js">
+</script>
 </html>
